# YieldStream-Chatbot

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 46648dc5469b_initial_schema.py  a1b2c3d4e5f6_add_widget_styling.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/api/: auth.py  chat.py  clients.py  deps.py
backend/app/middleware/: cors.py
backend/app/models/: __init__.py  api_key.py  client.py  conversation.py
backend/app/schemas/: auth.py  chat.py  client.py  widget_styling.py
backend/app/services/: auth.py  gemini.py  rate_limiter.py
backend/app/utils/: sanitize.py
backend/tests/: conftest.py  test_auth.py  test_clients.py  test_health.py  test_widget.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  mockData.ts  types.ts
dashboard/src/components/: ApiKeysTab.tsx  CenterPanel.css  CenterPanel.tsx  CreateClientModal.css  CreateClientModal.tsx  EmptyState.tsx  LeftRail.css  LeftRail.tsx  LimitsTab.tsx  PromptTab.tsx  RightRail.css  RightRail.tsx  WidgetPreview.tsx  WidgetTab.tsx
dashboard/src/components/styling/: BrandSection.tsx  LayoutSection.tsx  MotionSection.tsx  ShapeSection.tsx  StyleSection.tsx  (+2 more)
dashboard/src/constants/: templates.ts
dashboard/src/hooks/: useApi.ts
infra/: Dockerfile.api  Dockerfile.dashboard
infra/aws/: Dockerfile.lambda  lambda_handler.py  template.yaml
widget/: package-lock.json  package.json  tsconfig.json
widget/src/: api.ts  index.ts  styles.ts  types.ts  widget.ts
(+8 files in other folders)
